--- a/src/main/resources/public/application/form.html
+++ b/src/main/resources/public/application/form.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -32,100 +33,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-        html, body {
-            background: #efefef;
-        }
-        h2 {
-            font-family: 'Raleway','Helvetica Neue',Helvetica,Arial,sans-serif;
-            font-weight: 400;
-            margin-top: 0px;
-            margin-bottom: 30px;
-            color: #286090;
-        }
-        .page-header {
-            margin-top: 15px;
-            margin-bottom: 0px;
-        }
-        .motto {
-            font-family: 'Indie Flower', cursive, Helvetica,Arial,sans-serif;
-            float: right;
-            color: #909090;
-            font-size: 18px;
-        }
-        .panel-body {
-            background: #ffffff;
-            border-radius: 3px;
-            border: 1px solid #e0e0e0;
-            padding: 30px;
-            margin-bottom: 30px;
-        }
-        .form-control {
-            border: 1px solid #e0e0e0;
-        }
-        .form-group-lg .form-control {
-            border-radius: 2px;
-            height: 35px;
-            line-height: 35px;
-            padding: 0px 15px;
-        }
-        .form-group-lg select.form-control {
-            height: 35px;
-            line-height: 35px;
-        }
-        label {
-            font-weight: 400;
-            color: #808080;
-        }
-        .form-auto {
-            width: auto !important;
-        }
-        .radio label {
-            position: relative;
-            float: left;
-            margin-right: 20px;
-        }
-        .txt-red {
-            color: red;
-            margin-left: 5px;
-            font-weight: bold;
-        }
-        .form-group-lg .form-control {
-            font-size: 16px;
-        }
-        .form-sp {
-            position: relative;
-            width: 200px;
-        }
-        .form-sp span {
-            position: absolute;
-            right: 5px;
-            top: 5px;
-            color: #c0c0c0;
-        }
-        .txt-sub {
-            font-style: italic;
-            color: #808080;
-            font-size: 12px;
-        }
-        fieldset {
-            border: 1px solid #e0e0e0;
-            border-radius: 3px;
-            margin-bottom: 30px;
-            padding: 15px;
-        }
-        legend {
-            border-bottom: 0px;
-            font-size: 14px;
-            margin-bottom: 0px;
-            width: auto;
-            padding: 0 15px;
-            color: #808080;
-        }
-        .btn-lg {
-            border-radius: 2px;
-        }
-    </style>
 </head>
 
 <body>
@@ -134,32 +41,35 @@
     <div class="page-header">
         <div class="row">
             <div class="col-xs-12" style="margin: 0px auto; text-align: center;">
-                <img src="/majoingun/images/ABC-LOGO-WHITE-BG.png">
+                <img src="/majoingun/images/logo_company_transparent_white.png" style="width: 100px;">
+                <p class="motto">" Let fun at work together. "</p>
+            </div>
+        </div>
 
+    </div>
+    <div class="panel-body">
+        <div id="applicationForm"></div>
+    </div>
+    <div class="page-footer">
+        <div class="row">
+            <div class="col-xs-12" style="margin: 0px auto; text-align: center;">
+                <p>Unit 1101, 1104, 11th Floor Exchange Tower 388 Sukhumvit Road, Klongtoey, Bangkok 10110, Thailand.
+                <br/>
+                Phone : +66 (0) 2663 4340 Fax : +66 (0) 2663 4339 E-mail : contact@abctech-thailand.com
+                    <br/>
+                Copyright ABCTECH 2015. All Rights Reserve.</p>
             </div>
         </div>
 
     </div>
 
-    <!--<div class="panel panel-primary">-->
-        <!--<div class="panel-heading">-->
-            <!--<h3 class="panel-title">Application From</h3>-->
-        <!--</div>-->
-        <div class="panel-body">
-            <div id="applicationForm"></div>
-        </div>
-    <!--</div>-->
-
 </div> <!-- /container -->
 
 <script id='template' type='text/html'>
-    <form on-submit="submit">
+    <form on-submit="submit" id="applyForm">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12">
                 <h2>Application Form</h2>
-            </div>
-            <div class="col-xs-6">
-                <span class="motto">" Let fun at work together. "</span>
             </div>
         </div>
         <div class="row">
@@ -191,7 +101,7 @@
             <div class="form-group form-group-lg col-xs-6 date" data-date-format="dd-mm-yyyy">
                 <label for="dateOfBirth">Date of Birth<span class="txt-red">*</span></label>
                 <div class="form-sp">
-                    <input type="text" value="{{applicant.dateOfBirth}}" required class="form-control form-auto  datepicker" id="dateOfBirth">
+                    <input type="text" value="{{applicant.dateOfBirth}}" required class="form-control datepicker" id="dateOfBirth">
                     <span class="add-on"><i class="material-icons">date_range</i></span>
                 </div>
             </div>
@@ -285,7 +195,7 @@
             <div class="form-group form-group-lg col-xs-6 date" id="datepicker" data-date-format="dd-mm-yyyy">
                 <label for="availability">Availability Date<span class="txt-red">*</span></label>
                 <div class="form-sp">
-                    <input type="text" value="{{applicant.availability}}" class="form-control form-auto datepicker" id="availability">
+                    <input type="text" value="{{applicant.availability}}" class="form-control datepicker" id="availability">
                     <span class="add-on"><i class="material-icons">date_range</i></span>
                 </div>
             </div>
@@ -358,7 +268,7 @@
         <div class="row">
             <div class="col-xs-12" style="margin: 0px auto; text-align: center;">
                 <button type="submit" class="btn btn-primary btn-lg">Send Application</button>
-                <button type="button" class="btn btn-lg">Clear</button>
+                <button type="reset" class="btn btn-lg" id="clearForm">Clear</button>
             </div>
 
         </div>
