--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -57,32 +57,19 @@
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                         <div class="demo-crumbs mdl-color-text--grey-500">
-                            <h3>Registration form</h3>
+                            <h3>Registration Form</h3>
                             <div id="registerform"></div>
                         </div>
                     </div>
                 </div>
-                <!--<footer class="demo-footer mdl-mini-footer">-->
-                    <!--<div class="mdl-mini-footer&#45;&#45;left-section">-->
-                        <!--<ul class="mdl-mini-footer&#45;&#45;link-list">-->
-                            <!--<li><a href="http://www.getmdl.io/templates/article/index.html#">Help</a></li>-->
-                            <!--<li><a href="http://www.getmdl.io/templates/article/index.html#">Privacy and Terms</a></li>-->
-                            <!--<li><a href="http://www.getmdl.io/templates/article/index.html#">User Agreement</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</footer>-->
                 <footer class="mdl-mega-footer">
                     <div class="mdl-mega-footer__bottom-section" style="text-align: center">
-                        <p> Unit 1101, 1104, 11th Floor
-                            Exchange Tower 388 Sukhumvit Road, Klongtoey,
-                            Bangkok 10110, Thailand.
-                        </p>
                         <p> Phone : +66 (0) 2663 4340
                             Fax : +66 (0) 2663 4339
                             E-mail : contact@abctech-thailand.com
                         </p>
                         <p>
-                            Copyright ABCTECH 2015. All Rights Reserve
+                            Copyright ABC TECH 2016. All Rights Reserved
                         </p>
                     </div>
                 </footer>
@@ -160,35 +147,40 @@
 
                 <div class="mdl-cell mdl-cell--12-col">
 
-                    <h6>Interested fields :</h6>
+                    <h6>Please use Area of Interest :</h6>
                     <div class="mdl-cell mdl-cell--12-col mdl-typography--text-left">
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="backend">
                             <input type="checkbox" id="backend" class="mdl-checkbox__input"
-                                   name="{{prospect.interestedFields}}" value="Backend Developer">
-                            <span class="mdl-checkbox__label">Backend Developer</span>
+                                   name="{{prospect.interestedFields}}" value="Backend Development">
+                            <span class="mdl-checkbox__label">Backend Development</span>
                         </label>
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="frontend">
                             <input type="checkbox" id="frontend" class="mdl-checkbox__input"
-                                   name="{{prospect.interestedFields}}" value="Frontend Developer">
-                            <span class="mdl-checkbox__label">Frontend Developer</span>
+                                   name="{{prospect.interestedFields}}" value="Frontend Development">
+                            <span class="mdl-checkbox__label">Frontend Development</span>
                         </label>
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="tester">
                             <input type="checkbox" id="tester" class="mdl-checkbox__input"
-                                   name="{{prospect.interestedFields}}" value="Software Tester">
-                            <span class="mdl-checkbox__label">Software Tester</span>
+                                   name="{{prospect.interestedFields}}" value="Software Testing">
+                            <span class="mdl-checkbox__label">Software Testing</span>
+                        </label>
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="ux">
+                            <input type="checkbox" id="ux" class="mdl-checkbox__input"
+                                   name="{{prospect.interestedFields}}" value="UX/UI">
+                            <span class="mdl-checkbox__label">UX/UI</span>
                         </label>
                     </div>
                 </div>
                 <div class="mdl-cell mdl-cell--12-col">
                     <h6>Register for :</h6>
                     <div class="snippet-demo">
-                        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="intern">
-                            <input class="mdl-radio__button" id="intern" name="{{prospect.type}}" type="radio" value="intern">
-                            <span class="mdl-radio__label">Intern</span>
-                        </label>
                         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="permanent">
                             <input class="mdl-radio__button" id="permanent" name="{{prospect.type}}" type="radio" value="permanent">
                             <span class="mdl-radio__label">Permanent</span>
+                        </label>
+                        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="intern">
+                            <input class="mdl-radio__button" id="intern" name="{{prospect.type}}" type="radio" value="intern">
+                            <span class="mdl-radio__label">Intern</span>
                         </label>
                     </div>
                 </div>
@@ -197,7 +189,7 @@
             <div class="mdl-cell mdl-cell--12-col mdl-typography--text-right">
                 <button type="submit"
                         class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                    Save
+                    Register
                 </button>
             </div>
         </form>
