--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -142,7 +142,7 @@
 
                 <div class="mdl-cell mdl-cell--12-col" style="padding-bottom: 20px; margin-top: 15px;">
 
-                    <label>Please use Area of Interest :</label>
+                    <label>Please select area of interest :</label>
                     <div class="mdl-cell mdl-cell--12-col mdl-typography--text-left" style="margin-top: 15px;">
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="backend">
                             <input type="checkbox" id="backend" class="mdl-checkbox__input"
