Reload page when discard form

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -207,7 +207,8 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#clearBtn").click(function() {
-                $("#registerFrm").reset();
+                //$("#registerFrm").reset();
+                location.reload(true);
             });
         });
     </script>
