Add year column

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -140,14 +140,13 @@
                 </div>
                 <div class="mdl-cell mdl-cell--6-col">
                     <div class="mdl-select mdl-js-select mdl-select--floating-label">
-                        <select class="mdl-select__input" id="year" value="">
+                        <select class="mdl-select__input" id="year" value="{{prospect.year}}">
                             <option value=" " selected>Student Year</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
+                            <option value="freshman">Freshman</option>
+                            <option value="sophomore">Sophomore</option>
+                            <option value="junior">Junior</option>
                             <option value="4">4</option>
-                            <option value="5">More than 4</option>
-                            <option value="0">Graduated</option>
+                            <option value="Graduated">Graduated</option>
                         </select>
                     </div>
                 </div>
