Use senior instead of 4

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -145,7 +145,7 @@
                             <option value="freshman">Freshman</option>
                             <option value="sophomore">Sophomore</option>
                             <option value="junior">Junior</option>
-                            <option value="4">4</option>
+                            <option value="senior">Senior</option>
                             <option value="Graduated">Graduated</option>
                         </select>
                     </div>
