Use lowercase for student year

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -146,7 +146,7 @@
                             <option value="sophomore">Sophomore</option>
                             <option value="junior">Junior</option>
                             <option value="senior">Senior</option>
-                            <option value="Graduated">Graduated</option>
+                            <option value="graduated">Graduated</option>
                         </select>
                     </div>
                 </div>
